--- a/hello-world/package.json
+++ b/hello-world/package.json
@@ -22,6 +22,7 @@
     "npm": "^11.4.0"
   },
   "devDependencies": {
-    "electron": "^36.2.1"
+    "electron": "^36.2.1",
+    "prettier": "3.5.3"
   }
 }
